# terminal-chess

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
board/: CMakeLists.txt
board/include/: board.hpp
board/src/: board.cpp
chess/: CMakeLists.txt  main.cpp
piece/: CMakeLists.txt
piece/include/: piece.hpp
piece/src/: piece.cpp
